Possibile to search for  sedox product. Fixed alignment on sedox admin page.

--- a/com.getshop.client/apps/SedoxAdmin/skin/SedoxAdmin.css
+++ b/com.getshop.client/apps/SedoxAdmin/skin/SedoxAdmin.css
@@ -39,6 +39,20 @@
     width: 100px;
 }
 
+.SedoxAdmin .col_row_content .col_content.col4 {
+    height: 40px !important;
+    line-height: 30px !important;
+    white-space:nowrap;
+    position: relative;
+}
+.SedoxAdmin .col_row_content .ownerusername {
+    white-space:nowrap;
+    display: inline-block;
+    width: 100px;
+    overflow-x: hidden;
+    position: absolute;
+    top: 5px;
+}
 .SedoxAdmin .header .col_header.col4 {
     width: 200px !important;
 }
